# CLogger

./: .gitignore  CMakeLists.txt  README.md
src/: logger.c  logger.h
test/: logger_test.c
